// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render 3 columns and 3 rows 1`] = `
<div>
  <div
    class="cds-table__container"
  >
    <table
      class="cds-table"
    >
      <thead
        class="cds-table__head"
      >
        <tr
          class="cds-table__row"
        >
          <th
            class="cds-table__cell"
          >
            Heading 1
          </th>
          <th
            class="cds-table__cell"
          >
            Heading 2
          </th>
          <th
            class="cds-table__cell"
          >
            Heading 3
          </th>
        </tr>
      </thead>
      <tbody
        class="cds-table__body"
      >
        <tr
          class="cds-table__row"
        >
          <td
            class="cds-table__cell"
          >
            Cell 1
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 2
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 3
          </td>
        </tr>
        <tr
          class="cds-table__row"
        >
          <td
            class="cds-table__cell"
          >
            Cell 1
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 2
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 3
          </td>
        </tr>
        <tr
          class="cds-table__row"
        >
          <td
            class="cds-table__cell"
          >
            Cell 1
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 2
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table should render disabled version 1`] = `
<div>
  <div
    class="cds-table__container"
  >
    <table
      class="cds-table cds-table--disabled"
    >
      <thead
        class="cds-table__head"
      >
        <tr
          class="cds-table__row"
        >
          <th
            class="cds-table__cell"
          >
            Heading 1
          </th>
          <th
            class="cds-table__cell"
          >
            Heading 2
          </th>
          <th
            class="cds-table__cell"
          >
            Heading 3
          </th>
        </tr>
      </thead>
      <tbody
        class="cds-table__body"
      >
        <tr
          class="cds-table__row"
        >
          <td
            class="cds-table__cell"
          >
            Cell 1
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 2
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 3
          </td>
        </tr>
        <tr
          class="cds-table__row"
        >
          <td
            class="cds-table__cell"
          >
            Cell 1
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 2
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 3
          </td>
        </tr>
        <tr
          class="cds-table__row"
        >
          <td
            class="cds-table__cell"
          >
            Cell 1
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 2
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table should render sticky header version 1`] = `
<div>
  <div
    class="cds-table__container"
  >
    <table
      class="cds-table cds-table__sticky-header"
    >
      <thead
        class="cds-table__head"
      >
        <tr
          class="cds-table__row"
        >
          <th
            class="cds-table__cell"
          >
            Heading 1
          </th>
          <th
            class="cds-table__cell"
          >
            Heading 2
          </th>
          <th
            class="cds-table__cell"
          >
            Heading 3
          </th>
        </tr>
      </thead>
      <tbody
        class="cds-table__body"
      >
        <tr
          class="cds-table__row"
        >
          <td
            class="cds-table__cell"
          >
            Cell 1
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 2
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 3
          </td>
        </tr>
        <tr
          class="cds-table__row"
        >
          <td
            class="cds-table__cell"
          >
            Cell 1
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 2
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 3
          </td>
        </tr>
        <tr
          class="cds-table__row"
        >
          <td
            class="cds-table__cell"
          >
            Cell 1
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 2
          </td>
          <td
            class="cds-table__cell"
          >
            Cell 3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
